Header title spacing fixes

--- a/style.css
+++ b/style.css
@@ -981,7 +981,7 @@ a:active {
 
 .home-title{
 	position: absolute;
-	top: 0px;
+	top: 20%;
 	height: 100%;
     text-align: center;
     width: 100%;
@@ -989,11 +989,6 @@ a:active {
     font-family: Helvetica;
     font-weight: lighter;
     line-height: 1;
-    display: table;
-}
-.home-title .widget_home_title_widget{
-	display:table-cell;
-	vertical-align: middle;
 }
 .home-title .home-title-large{
 	font-size: 9.5em;
@@ -1003,13 +998,13 @@ a:active {
 }
 .home-title .home-title-button{
 	font-size: 2em;
-	margin-top:30px;
+	margin:30px 0px;
 }
 .home-title .home-title-button a{
     color: #ffffff;
     text-decoration: none;
     border: 1px solid #ffffff;
-    padding: 8px 25px;
+    padding: 8px 50px;
 }
 .home-title .home-title-button a:hover,.home-title .home-title-button a:visited,.home-title .home-title-button a:focus{
 	color:#ffffff;
@@ -1017,9 +1012,10 @@ a:active {
 }
 .home-title .home-title-footer{
 	font-size: 1em;
-	position: absolute;
-	bottom: 70px;
 	width: 100%;
+}
+.home-title .home-title-footer a {
+	color: #ffffff;
 }
 @media screen and (max-width: 900px) {
 	.home-title{
@@ -1028,19 +1024,22 @@ a:active {
 	.home-title .home-title-footer{
 		font-size: 1.2em;
 	}
+	.home-title .home-title-button a {
+		padding: 8px 40px;
+	}
 }
 @media screen and (max-width: 700px) {
 	.home-title{
-		font-size: 0.65em;
+		font-size: 0.45em;
 	}
 	.home-title .home-title-footer{
 		font-size: 1.35em;
 	}
+	.home-title .home-title-button a {
+		padding: 8px 25px;
+	}
 }
 @media screen and (max-width: 550px) {
-	.home-title{
-		font-size: 0.45em;
-	}
 	.home-title .home-title-footer{
 		font-size: 2em;
 	}
@@ -1051,6 +1050,9 @@ a:active {
 	}
 	.home-title .home-title-footer{
 		font-size: 2em;
+	}
+	.home-title .home-title-button a {
+		padding: 8px 20px;
 	}
 	.main-navigation .logo{
 		max-width: 220px;
